Reorganized visible issue card information

--- a/web_src/css/base.css
+++ b/web_src/css/base.css
@@ -943,7 +943,8 @@ ol.ui.list li,
 img.ui.avatar,
 .ui.avatar img,
 .ui.avatar svg {
-  border-radius: var(--border-radius);
+  border-radius: 50%;
+  border-color: var(--color-secondary);
   object-fit: contain;
   aspect-ratio: 1;
 }
